# cppAdvanced

./: .gitignore  Dockerfile  README.md
Function Implementation/: counter.cpp  functions list.txt  reverse.cpp  search.cpp  set.cpp
OOPs concepts/: char ptr class.cpp  copy assignment operator.cpp  default constructor.cpp  destructor.cpp  friend class.cpp  friend function1.cpp  friend function2.cpp  function overloading1.cpp  function overloading2.cpp  functor.cpp  getter setter.cpp  inheritance.cpp  initializer list1.cpp  initializer list2.cpp  multilevel inheritance.cpp  multiple inheritance.cpp  operator overloading.cpp  parameterised constructor.cpp  pass by value vs pass by reference.cpp  shallow copy vs deep copy.cpp  single inheritance.cpp  virtual destructor.cpp  virtual function.cpp
STL examples/: deque.cpp  find1.cpp  find2.cpp  list.cpp  map.cpp  multimap.cpp  multiset.cpp  pair.cpp  problem solving stl.cpp  queue.cpp  set.cpp  stack.cpp  tuple.cpp  vector.cpp
architectural questions/: Makefile  TODO.txt  architectural details.txt  client.cpp  client.pro  server.cpp  server.pro
casting operators/: downcasting using dynamic cast.cpp  downcasting using static cast.cpp  primitive type conversion using static cast.cpp  reinterpret cast.cpp  upcasting.cpp
compiler behaviour/: compilation steps.txt  memory management.txt
control statements/: binary search.cpp  bubble sort.cpp  lambda expression.cpp  linear search.cpp  macro.cpp  selection sort.cpp  switch statement.cpp
data structures/: doubly Linked List.cpp  singly linked list.cpp
design patterns/: factory pattern.cpp  singleton pattern.cpp
gtest framework/: CMakeLists.txt  CMakeLists.txt.bak1  CMakeLists.txt.bak2  CMakeLists.txt.bak3
gtest framework/cmake/: Config.cmake.in
gtest framework/demo_calculator_user/: CMakeLists.txt  main.cpp
gtest framework/src/: CMakeLists.txt  calculator.cpp  calculator.h
gtest framework/test/: CMakeLists.txt  test_calculator.cpp
how it works/: Compilation Process.txt  InterProcessCommunication.txt  Program Execution Flow.txt  QT Workflow.txt  Thread Synchronization.txt  gTest Workflow.txt
how_it_works/: Debugging Threads.txt  Linux Structure.txt
interview_questions/: Test on Agile.txt  Test on DevOps.txt  Test on Multithreading.txt  Test on QT.txt  Test on Socket Programming.txt  Test on gTest.txt
lamda expressions/: generic lambda.cpp
multithreading/: atomic.cpp  condition variable.cpp  even odd threads.cpp  lock guard.cpp  mutex.cpp  shared mutex.cpp  thread local.cpp  (+1 more)
(+107 files in other folders)
